Changes in 0.14:
    * Added backtrace formatter and exception hook
    * Added contributor agreement
    * client: fix crash when detaching
    * server: play nicer with environments where sys.stdout is not a regular
      file
    * Updated Copyright to SAS Institute, Inc.
Changes in 0.13:
    * Fixed a crash in epdb_client when the terminal is > 255 columns wide
    * Fixed terminal control bytes being emitted when epdb is imported
Changes in 0.12:
    * Changed license to MIT
    * Fixed crash when trying to serve() from a secondary thread
Changes in 0.11:
    * The post_mortem() command was broken in 0.10, this has been fixed.
Changes in 0.10:
    * epdb now supports a "serve()" command to serve epdb requests remotely
Changes in 0.9.1.1:
    * epdb will automatically switch to the process group with session control,
      so that in programs where setpgrp() has been called, such processes 
      can still be debugged.
Changes in 0.9.1:
    * until now works with filenames
    * breakpoints/etc that take filenames will also now take sys.module
      entries, e.g. foo.bar, if sys.modules['foo.bar'] exists.
Changes in 0.9: 
    * readline history should be much more well behaved
    * multiline entries will be stored as one entry
    * input is set to /dev/tty as well as output if the current input stream
      in not a terminal
    * The new fail_silently_on_ioerror config value will allow you to avoid
      raising an exception when a breakpoint is hit an no terminal is
      available. Use with caution as it could allow you to leave unintended
      breakpoints in your program.
Changes in 0.8.1:
    * Add cross-session readline history 
Changes in 0.8:
    * Initial seperate epdb release